re PR middle-end/27657 (bogus undefined reference error to static var with -g and -O)

2007-01-30  Richard Guenther  <rguenther@suse.de>

	PR middle-end/27657
	* dwarf2out.c (reference_to_unused): Query varpool if the
	variable was output.

	* g++.dg/debug/pr27657.C: New testcase.

From-SVN: r121335